[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/CenteredMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/escape_menu.gd" type="Script" id=2]
[ext_resource path="res://src/ui/font.tres" type="DynamicFont" id=3]

[node name="EscapeMenu" instance=ExtResource( 1 )]
theme = null
script = ExtResource( 2 )

[node name="PanelContainer" parent="." index="0"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 263.0
margin_bottom = 456.0

[node name="Contents" parent="PanelContainer" index="0"]
margin_bottom = 186.0
custom_constants/separation = 30

[node name="Pausing" type="Label" parent="PanelContainer/Contents" index="0"]
margin_right = 100.0
margin_bottom = 14.0
text = "Game Paused"
align = 1
valign = 1

[node name="ResumeButton" type="Button" parent="PanelContainer/Contents" index="1"]
margin_top = 44.0
margin_right = 100.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 3 )
text = "Resume"

[node name="ExitMenuButton" type="Button" parent="PanelContainer/Contents" index="2"]
margin_top = 99.0
margin_right = 100.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 3 )
text = "Exit to menu"

[node name="ExitDesktopButton" type="Button" parent="PanelContainer/Contents" index="3"]
margin_top = 154.0
margin_right = 100.0
margin_bottom = 179.0
custom_fonts/font = ExtResource( 3 )
text = "Exit to desktop"
